--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
+    "mockjs": "^1.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -29,7 +32,7 @@
     "chalk": "^2.0.1",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -43,6 +46,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^4.1.0",
+    "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^7.0.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -52,13 +57,14 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^4.1.0",
     "sass-resources-loader": "^2.2.5",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
